# qwen2API

./: .env.example  .gitignore  AGENTS.md  README.md  backend_funcs.txt  dev_funcs.txt  pyproject.toml
.github/workflows/: render-healthcheck.yml
backend/: app_factory.py  main.py  requirements.txt
backend/adapter/: cli_proxy.py
backend/api/: admin.py  anthropic.py  embeddings.py  gemini.py  images.py  models.py  v1_chat.py
backend/application/: __init__.py  container.py
backend/application/completions/: __init__.py  bridge.py  prompt_builder.py  request_builder.py
backend/core/: browser_engine.py  config.py  database.py
backend/integrations/qwen/: __init__.py  client.py  executor.py
backend/protocols/common/: __init__.py  cli_proxy.py
backend/protocols/openai/: __init__.py  stream_translator.py
backend/runtime/: anthropic_stream.py  attempt.py  cleanup.py  execution.py  recovery.py  retry.py  runner.py  tool_directive.py  types.py  usage.py
backend/services/: admin_auth.py  attachment_preprocessor.py  auth_quota.py  auth_resolver.py  completion_bridge.py  context_attachment_manager.py  file_store.py  openai_stream_translator.py  prompt_builder.py  qwen_client.py  response_formatters.py  standard_request_builder.py  task_session.py  tool_parser.py  upstream_file_uploader.py
backend/tests/: test_admin_auth.py  test_app_factory.py  test_protocol_regression.py
backend/upstream/: payload_builder.py  qwen_executor.py  sse_consumer.py
frontend/: .env.example  package.json
frontend/src/: App.tsx
frontend/src/layouts/: AdminLayout.tsx
(+31 files in other folders)
